# psytoday-scraper

./: .gitignore  README.md  build_review.py  common.py  config.py  enrich.py  enrich_llm.py  extract.py  pyproject.toml  run.py  score_heuristic.py  scrape.py
context/: therapist-scraper-spec.md
experiments/: backfill_contact_fields.py  calibrate.py  evaluate.py  haiku_calibration.py  haiku_check.py  haiku_topup.py  model_select.py  opus_arbiter.py  suzie_check.py  validate_calibration.py
